# parameter-weaver

./: .gitignore  INSTALL.txt  Makefile.am  Makefile.in  README.md  TODO.md  TODO.txt  configure  configure.ac  mkdocs.yml
doc/: Makefile.in
doc/parameter_weaver/: Makefile.am  Makefile.in  c.html  f90.html  index.html  octave.html  r.html
docs/: c.md  contact.md  f90.md  future.md  index.md  make.md  overview.md  r.md
examples/: Makefile.in
examples/parameter_weaver/: Makefile.am  Makefile.in
examples/parameter_weaver/c/: Makefile.am  Makefile.example  Makefile.in  generate.sh  main.c  main_config.c  param_defs.txt
html_docs/: Makefile.in
html_docs/parameter_weaver/: Makefile.am  Makefile.in  index.html
src/: Makefile.am  Makefile.in  Makefile.old  c_conf_prefix_name_test.py  c_conf_run_test.py  c_formatter_test.py  c_help_run_test.py  c_infrastructure_test.py  c_parser_test.py  c_prefix_name_test.py  c_run_empty_test.py  c_run_test.py  fortran_conf_run_test.py  fortran_formatter_test.py  fortran_parser_test.py  fortran_run_test.py  r_run_test.py  run_tests  util_test.py  utils.py  weave  weave.py
src/tests/: bad_c.txt  c_conf_01.txt  c_conf_prefix_T.txt  c_conf_prefix_T_Tmin.txt  c_conf_prefix_Tmin.txt  descr_c.txt  descr_help.txt  empty_c.txt  excel_c.csv  excel_c.xlsx  flag_c.txt  flag_fortran.txt  flag_main.f90  flag_main_dump.f90  fortran_conf_02.txt  good_c.conf  good_c.txt  good_fortran.txt  good_octave.txt  good_r.txt  main.c  main.f90  main_conf_dump.c  main_conf_dump.f90  main_dump.c  main_dump.f90  main_dump.m  main_dump.r  out_c.txt  out_flag_fortran.txt  out_fortran.txt  prefix_c.txt  ugly_c.txt
src/tmpl/: Makefile.in
src/vsc/: Makefile.am  Makefile.in  util.py
src/vsc/parameter_weaver/: Makefile.am  Makefile.in  artifact.py  base_formatter.py  base_validator.py  help_formatter.py  params.py  templatefile.py  temporaryfile.py
src/vsc/parameter_weaver/c/: Makefile.am  Makefile.in  formatter.py  types.py  validator.py
src/vsc/parameter_weaver/fortran/: Makefile.am  Makefile.in  formatter.py  types.py  validator.py
src/vsc/parameter_weaver/octave/: formatter.py  types.py  validator.py
src/vsc/parameter_weaver/r/: Makefile.am  Makefile.in  __init__.py  formatter.py  types.py  validator.py
(+52 files in other folders)
