AC_INIT([parameter-weaver], [2.1], [geertjan.bex@uhasselt.be])
AM_INIT_AUTOMAKE([-Wall -Werror foreign tar-pax])
AC_CONFIG_FILES([
    Makefile
    src/Makefile
    src/vsc/Makefile
    src/vsc/parameter_weaver/Makefile
    src/vsc/parameter_weaver/c/Makefile
    src/vsc/parameter_weaver/fortran/Makefile
    src/vsc/parameter_weaver/r/Makefile
    src/tmpl/Makefile
    src/tmpl/c/Makefile
    doc/Makefile
    doc/parameter_weaver/Makefile
    examples/Makefile
    examples/parameter_weaver/Makefile
    examples/parameter_weaver/c/Makefile
    examples/parameter_weaver/f90/Makefile
    examples/parameter_weaver/r/Makefile
])
AC_OUTPUT
