SUBDIRS = c fortran r
pwvsclibdir = $(libdir)/parameter_weaver/python/vsc/parameter_weaver
dist_pwvsclib_DATA = __init__.py artifact.py \
                     base_formatter.py base_validator.py \
                     help_formatter.py params.py templatefile.py \
                     temporaryfile.py

